--- a/style.css
+++ b/style.css
@@ -51,5 +51,19 @@ h2 {
   width: 80%;
   margin: 10%;
 }
-.recipi-cards {
+.social-media {
+  margin-top: 5%;
+  margin-left: 8%;
+  margin-right: 8%;
+  padding-left: 3%;
+  border-radius: 25px;
+}
+.box {
+  text-align: center;
+  margin-top: 2%;
+  margin-left: 2%;
+  margin-right: 2%;
+  padding: 2%;
+  border-radius: 25px;
+  box-shadow: 10px 10px 40px gray;
 }
