--- a/style.css
+++ b/style.css
@@ -2,6 +2,32 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+}
+li {
+  float: left;
+}
+li a {
+  display: inline-block;
+  color: white;
+
+  text-align: center;
+  padding: 25px 28px;
+  margin-left: 60px;
+  text-decoration: none;
+  font-weight: 700;
+}
+li a:hover {
+  background-color: lightseagreen;
+  font-size: 30px;
+}
+
 h1 {
   font-size: 50px;
 }
