--- a/style.css
+++ b/style.css
@@ -93,6 +93,44 @@ h2 {
   border-radius: 25px;
   box-shadow: 10px 10px 40px gray;
 }
+.input-box {
+  text-align: center;
+  margin: 2%;
+  padding: 2%;
+}
+
+input[type="text"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  width: 100%;
+  background-color: lightseagreen;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-image: linear-gradient(orange, tomato);
+}
+
+.input-file {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
 footer {
   padding-top: 2%;
   padding-bottom: 4%;
